<resources>
    <string name="app_name">SHC</string>
    <string name="powered_by_martdevelopers_inc">Powered By MartDevelopers Inc</string>
    <string name="instructions">Tap Log In As Medical Expert Or Log In As Client</string>
    <string name="doc_login">Log In As Doctor</string>
    <string name="client_login">Log In As Client</string>

    <string name="todo">TODO</string>
    <string name="enter_you_e">
        Enter you email
    </string>
    <string name="create_pass">
        Create password
    </string>
    <string name="confirm_pas">
        Confirm password
    </string>
    <string name="enter_your_">
        Enter your full name
    </string>
    <string name="already_hav">
        Already have an account? Login
    </string>
    <string name="let_s_help_">
        Let\u00e2\u0080\u0099s help you meet up your tasks.
    </string>
    <string name="welcome_onb">
        Welcome Onbard!
    </string>
    <string name="welcome_bac">
        Welcome Back!
    </string>
    <string name="not_have_an">
        Not have an account? Register
    </string>
    <string name="forget_pass">
        Forget Password?
    </string>

</resources>